# snippetpixie

./: .gitignore  .travis.yml  01-setup.sh  02-build-bin.sh  03-build-snap.sh  04-build-flatpak.sh  README.md  com.github.bytepixie.snippetpixie.yml  meson.build  snapcraft.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: Application.css  com.bytepixie.snippet-pixie.appdata.xml.in  com.bytepixie.snippet-pixie.desktop.in  com.bytepixie.snippet-pixie.gresource.xml  com.bytepixie.snippet-pixie.gschema.xml  com.bytepixie.snippetpixie.appdata.xml.in  com.bytepixie.snippetpixie.desktop.in  com.bytepixie.snippetpixie.gschema.xml  com.github.bytepixie.snippetpixie.appdata.xml.in  com.github.bytepixie.snippetpixie.desktop.in  com.github.bytepixie.snippetpixie.gresource.xml  com.github.bytepixie.snippetpixie.gschema.xml  meson.build  snap-banner.xcf
debian/: changelog  control  copyright  rules
man/: snippetpixie-placeholders.5  snippetpixie-placeholders.5.scd  snippetpixie.1  snippetpixie.1.scd
meson/: post_install.py
po/: POTFILES  POTFILES.in  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.bytepixie.snippet-pixie.pot  com.bytepixie.snippetpixie.pot  com.github.bytepixie.snippetpixie.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  (+161 more)
po/extra/: POTFILES  de.po  es.po  extra.pot  fr.po  nl.po
src/: Application.vala  FramedTextView.vala  MainWindow.vala  MainWindowHeader.vala  SearchAndPasteAlertView.vala  SearchAndPasteListRow.vala  SearchAndPasteWindow.vala  Snippet.vala  SnippetsList.vala  SnippetsListItem.vala  SnippetsManager.vala  Utils.vala  ViewStack.vala  WelcomeView.vala
src/Settings/: CustomShortcutSettings.vala
src/Widgets/: FramedTextView.vala  MainWindowHeader.vala  SearchAndPasteList.vala  SearchAndPasteListRow.vala  ShortcutEntry.vala  SnippetsList.vala  SnippetsListItem.vala  ViewStack.vala
src/Windows/: MainWindow.vala  SearchAndPasteWindow.vala
